# ads2inspire

./: .bumpversion.cfg  .zenodo.json  LICENSE  README.md  ads2inspire.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  publish-package.yml
src/ads2inspire/: __init__.py  cli.py
