[metadata]
name = ads2inspire
version = 0.1.0
description = Replace ADS citations with the appropriate INSPIRE ones in latex and bibtex
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/duetosymmetry/ads2inspire
author = Leo C. Stein
author_email = leo.stein@gmail.com
license = MIT
license_file = LICENSE
keywords = latex bibtex bibliography
project_urls =
    Source = https://github.com/duetosymmetry/ads2inspire
    Tracker = https://github.com/duetosymmetry/ads2inspire/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Text Processing
    Topic :: Text Processing :: Markup
    Topic :: Text Processing :: Markup :: LaTeX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[bdist_wheel]
universal = 1

[options]
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    bibtexparser
    click>=6.0  # for console scripts

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ads2inspire = ads2inspire.cli:ads2inspire
